--- a/pom.xml
+++ b/pom.xml
@@ -2,26 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.bazaarvoice.commons</groupId>
-        <artifactId>bv-opensource-super-pom</artifactId>
-        <version>1.3</version>
-    </parent>
-
-    <groupId>com.bazaarvoice.dropwizard</groupId>
+    <groupId>com.nefariouszhen.dropwizard</groupId>
     <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-    <version>0.2.3-SNAPSHOT</version>
+    <version>0.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
 
     <name>Dropwizard Configurable Asset Bundle</name>
     <description>An implementation of an AssetBundle for use in Dropwizard that allows user configuration.</description>
 
     <scm>
-        <url>https://github.com/bazaarvoice/dropwizard-configurable-assets-bundle</url>
-        <connection>scm:git:git@github.com:bazaarvoice/dropwizard-configurable-assets-bundle.git</connection>
-        <developerConnection>
-            scm:git:git@github.com:bazaarvoice/dropwizard-configurable-assets-bundle.git
-        </developerConnection>
+        <url>https://github.com/dropwizard-bundles/dropwizard-configurable-assets-bundle</url>
+        <connection>scm:git:git@github.com:dropwizard-bundles/dropwizard-configurable-assets-bundle.git</connection>
+        <developerConnection>scm:git:git@github.com:dropwizard-bundles/dropwizard-configurable-assets-bundle.git</developerConnection>
       <tag>HEAD</tag>
   </scm>
 
