--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.nefariouszhen.dropwizard</groupId>
+    <groupId>io.dropwizard-bundles</groupId>
     <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-    <version>0.8.1-SNAPSHOT</version>
+    <version>0.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -30,20 +30,24 @@
         <developerConnection>scm:git:git@github.com:dropwizard-bundles/dropwizard-configurable-assets-bundle.git</developerConnection>
     </scm>
 
+    <developers>
+        <developer>
+            <id>bbeck</id>
+            <name>Brandon Beck</name>
+            <url>http://github.com/bbeck</url>
+        </developer>
+        <developer>
+            <id>nbauernfeind</id>
+            <name>Nate Bauernfeind</name>
+            <url>http://github.com/nbauernfeind</url>
+        </developer>
+    </developers>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jetty.version>9.2.9.v20150224</jetty.version>
         <dropwizard.version>0.8.0</dropwizard.version>
     </properties>
-
-    <developers>
-        <developer>
-            <id>nbauernfeind</id>
-            <name>Nate Bauernfeind</name>
-            <url>http://github.com/nbauernfeind/</url>
-        </developer>
-    </developers>
 
     <dependencies>
         <dependency>
