[maven-release-plugin] prepare release dropwizard-configurable-assets-bundle-0.8.5

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.dropwizard-bundles</groupId>
     <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-    <version>0.8.5-SNAPSHOT</version>
+    <version>0.8.5</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -46,7 +46,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <dropwizard.version>0.8.4</dropwizard.version>
+        <dropwizard.version>0.8.5</dropwizard.version>
         <guava.version>18.0</guava.version>
         <jetty.version>9.2.9.v20150224</jetty.version>
     </properties>
