--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.dropwizard-bundles</groupId>
     <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-    <version>0.8.5</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
