--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.dropwizard-bundles</groupId>
     <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-    <version>0.9.2-3-SNAPSHOT</version>
+    <version>1.0.0-rc1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -46,9 +46,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <dropwizard.version>0.9.2</dropwizard.version>
-        <guava.version>18.0</guava.version>
-        <jetty.version>9.2.13.v20150730</jetty.version>
+        <dropwizard.version>1.0.0-rc1</dropwizard.version>
+        <guava.version>19.0</guava.version>
+        <jetty.version>9.3.8.v20160314</jetty.version>
     </properties>
 
     <dependencies>
@@ -67,13 +67,6 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-servlets</artifactId>
             <version>${dropwizard.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${jetty.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
