--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.dropwizard-bundles</groupId>
     <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-    <version>1.0.0-rc2</version>
+    <version>1.0.0-rc3-1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
