update to DW 1.0

--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <dropwizard.version>1.0.0-rc2</dropwizard.version>
+        <dropwizard.version>1.0.0</dropwizard.version>
         <guava.version>19.0</guava.version>
-        <jetty.version>9.3.8.v20160314</jetty.version>
+        <jetty.version>9.3.9.v20160517</jetty.version>
     </properties>
 
     <dependencies>
