--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-  <version>1.1.4</version>  <!-- Make sure to keep this in sync with the parent pom version above. -->
+  <version>1.1.4-SNAPSHOT</version>  <!-- Make sure to keep this in sync with the parent pom version above. -->
   <packaging>jar</packaging>
 
   <name>Dropwizard Configurable Asset Bundle</name>
