--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>dropwizard-configurable-assets-bundle</artifactId>
-  <version>1.3.5</version>  <!-- Make sure to keep this in sync with the parent pom version above. -->
+  <version>1.3.5-1-SNAPSHOT</version>  <!-- Make sure to keep this in sync with the parent pom version above. -->
   <packaging>jar</packaging>
 
   <name>Dropwizard Configurable Asset Bundle</name>
@@ -27,7 +27,7 @@
     <url>https://github.com/dropwizard-bundles/dropwizard-configurable-assets-bundle</url>
     <connection>scm:git:https://github.com/dropwizard-bundles/dropwizard-configurable-assets-bundle</connection>
     <developerConnection>scm:git:https://github.com/dropwizard-bundles/dropwizard-configurable-assets-bundle</developerConnection>
-    <tag>v1.3.5</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
